--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -278,17 +278,17 @@
                         <!-- Navbar Icons -->
                         <ul class="quick-access">
                             <!------<li class="access-icon" style="padding-right:20px;">
-            <a class="search-trigger-active rbt-round-btn" href="#">
-                <i class="feather-search"></i>
-            </a>
-        </li>
+                                <a class="search-trigger-active rbt-round-btn" href="#">
+                                    <i class="feather-search"></i>
+                                </a>
+                            </li>
 
-         <li class="access-icon rbt-mini-cart">
-                 <a class="rbt-cart-sidenav-activation rbt-round-btn" href="#">
-                     <i class="feather-shopping-cart"></i>
-                     <span class="rbt-cart-count">4</span>
-                 </a>
-             </li>--->
+                             <li class="access-icon rbt-mini-cart">
+                                     <a class="rbt-cart-sidenav-activation rbt-round-btn" href="#">
+                                         <i class="feather-shopping-cart"></i>
+                                         <span class="rbt-cart-count">4</span>
+                                     </a>
+                                 </li>--->
 
 
 
@@ -327,7 +327,7 @@
                                             <ul class="user-list-wrapper">
 
                                                 <li>
-                                                    <a href="/Login">
+                                                    <a href="#" id="Logout">
                                                         <i class="feather-log-out"></i>
                                                         <span>Logout</span>
                                                     </a>
@@ -343,120 +343,131 @@
                                 }
                             </li>
                             <!---
-             <li class="access-icon rbt-user-wrapper d-block d-xl-none">
-                 <a class="rbt-round-btn" href="#"><i class="feather-user"></i></a>
-                 <div class="rbt-user-menu-list-wrapper">
-                     <div class="inner">
-                         <div class="rbt-admin-profile">
+                                 <li class="access-icon rbt-user-wrapper d-block d-xl-none">
+                                     <a class="rbt-round-btn" href="#"><i class="feather-user"></i></a>
+                                     <div class="rbt-user-menu-list-wrapper">
+                                         <div class="inner">
+                                             <div class="rbt-admin-profile">
 
-                             <div class="admin-thumbnail">
-                                 <img src="assets/images/team/avatar.jpg" alt="User Images">
-                             </div>
-                             <div class="admin-info">
-                                 <span class="name">Nipa Bali</span>
-                                 <a class="rbt-btn-link color-primary" href="profile">View Profile</a>
-                             </div>
-                         </div>
-                         <ul class="user-list-wrapper">
-                             <li>
-                                 <a href="instructor-dashboard">
-                                     <i class="feather-home"></i>
-                                     <span>My Dashboard</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="#">
-                                     <i class="feather-bookmark"></i>
-                                     <span>Bookmark</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-enrolled-courses">
-                                     <i class="feather-shopping-bag"></i>
-                                     <span>Enrolled Courses</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-wishlist">
-                                     <i class="feather-heart"></i>
-                                     <span>Wishlist</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-reviews">
-                                     <i class="feather-star"></i>
-                                     <span>Reviews</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-my-quiz-attempts">
-                                     <i class="feather-list"></i>
-                                     <span>My Quiz Attempts</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-order-history">
-                                     <i class="feather-clock"></i>
-                                     <span>Order History</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="instructor-quiz-attempts">
-                                     <i class="feather-message-square"></i>
-                                     <span>Question & Answer</span>
-                                 </a>
-                             </li>
-                         </ul>
-                         <hr class="mt--10 mb--10">
-                         <ul class="user-list-wrapper">
-                             <li>
-                                 <a href="#">
-                                     <i class="feather-book-open"></i>
-                                     <span>Getting Started</span>
-                                 </a>
-                             </li>
-                         </ul>
-                         <hr class="mt--10 mb--10">
-                         <ul class="user-list-wrapper">
-                             <li>
-                                 <a href="instructor-settings">
-                                     <i class="feather-settings"></i>
-                                     <span>Settings</span>
-                                 </a>
-                             </li>
-                             <li>
-                                 <a href="index">
-                                     <i class="feather-log-out"></i>
-                                     <span>Logout</span>
-                                 </a>
-                             </li>
-                         </ul>
-                     </div>
-                 </div>
-             </li>
-        ------------>
+                                                 <div class="admin-thumbnail">
+                                                     <img src="assets/images/team/avatar.jpg" alt="User Images">
+                                                 </div>
+                                                 <div class="admin-info">
+                                                     <span class="name">Nipa Bali</span>
+                                                     <a class="rbt-btn-link color-primary" href="profile">View Profile</a>
+                                                 </div>
+                                             </div>
+                                             <ul class="user-list-wrapper">
+                                                 <li>
+                                                     <a href="instructor-dashboard">
+                                                         <i class="feather-home"></i>
+                                                         <span>My Dashboard</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="#">
+                                                         <i class="feather-bookmark"></i>
+                                                         <span>Bookmark</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-enrolled-courses">
+                                                         <i class="feather-shopping-bag"></i>
+                                                         <span>Enrolled Courses</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-wishlist">
+                                                         <i class="feather-heart"></i>
+                                                         <span>Wishlist</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-reviews">
+                                                         <i class="feather-star"></i>
+                                                         <span>Reviews</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-my-quiz-attempts">
+                                                         <i class="feather-list"></i>
+                                                         <span>My Quiz Attempts</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-order-history">
+                                                         <i class="feather-clock"></i>
+                                                         <span>Order History</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="instructor-quiz-attempts">
+                                                         <i class="feather-message-square"></i>
+                                                         <span>Question & Answer</span>
+                                                     </a>
+                                                 </li>
+                                             </ul>
+                                             <hr class="mt--10 mb--10">
+                                             <ul class="user-list-wrapper">
+                                                 <li>
+                                                     <a href="#">
+                                                         <i class="feather-book-open"></i>
+                                                         <span>Getting Started</span>
+                                                     </a>
+                                                 </li>
+                                             </ul>
+                                             <hr class="mt--10 mb--10">
+                                             <ul class="user-list-wrapper">
+                                                 <li>
+                                                     <a href="instructor-settings">
+                                                         <i class="feather-settings"></i>
+                                                         <span>Settings</span>
+                                                     </a>
+                                                 </li>
+                                                 <li>
+                                                     <a href="index">
+                                                         <i class="feather-log-out"></i>
+                                                         <span>Logout</span>
+                                                     </a>
+                                                 </li>
+                                             </ul>
+                                         </div>
+                                     </div>
+                                 </li>
+                            ------------>
                         </ul>
                         <div class="rbt-btn-wrapper d-none d-xl-block">
                             @if (Session["LoggedIn"] != "true")
                             {
 
-                                <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none" href="vitkund">
+
+
+                                <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none" href="/vitkund">
                                     Vitkund Gaon
                                 </a>
 
                             }
+                            else
+                            {
+                                if (Session["Role"] != "Admin")
+                                {
+                                    <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none" href="/result">
+                                        Result
+                                    </a>
+                                }
+                            }
                         </div>
-                            <!-- Start Mobile-Menu-Bar -->
-                            <div class="mobile-menu-bar d-block d-xl-none">
-                                <div class="hamberger">
-                                    <button class="hamberger-button rbt-round-btn">
-                                        <i class="feather-menu"></i>
-                                    </button>
-                                </div>
+                        <!-- Start Mobile-Menu-Bar -->
+                        <div class="mobile-menu-bar d-block d-xl-none">
+                            <div class="hamberger">
+                                <button class="hamberger-button rbt-round-btn">
+                                    <i class="feather-menu"></i>
+                                </button>
                             </div>
-                            <!-- Start Mobile-Menu-Bar -->
-
                         </div>
+                        <!-- Start Mobile-Menu-Bar -->
+
+                    </div>
                 </div>
             </div>
             <!-- Start Search Dropdown  -->
@@ -756,7 +767,13 @@
     <script src="~/Content/assets/js/vendor/plyr.js"></script>
     <!-- Main JS -->
     <script src="~/Content/assets/js/main.js"></script>
+    <script>
+        $("#Logout").click(function () {
+            localStorage.clear();
 
+            window.location.href = "/Logout";
+        })
+    </script>
 </body>
 </html>
 
