--- a/Vitkund/Views/Home/BusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeas.cshtml
@@ -163,7 +163,7 @@
                                         <!-- <span class="current-price">$60</span> -->
                                         <!-- <span class="off-price">$120</span> -->
                                         <!-- </div> -->
-                                        <a class="rbt-btn-link" href="/Business-Ideas/@item.Id">
+                                        <a class="rbt-btn-link" href="/Trending-Business/@item.Id">
                                             Learn More<i class="feather-arrow-right"></i>
                                         </a>
                                     </div>
