--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -664,11 +664,11 @@
                                         <a href="/contact-us">Contact Us</a>
                                     </li>
                                     <li>
-                                        <a href="/Trending-Business">Business Ideas</a>
+                                        <a href="/Business-Ideas">Business Ideas</a>
                                     </li>
 
                                     <li>
-                                        <a href="/business-ideas">Trending Business </a>
+                                        <a href="/Trending-Business">Trending Business </a>
                                     </li>
                                     <li>
                                         <a href="/gallery">Gallery</a>
